  that prior approach caused confusing an buggy behavior, where Make would
  search the include path, which also contains all of PATH, for *any* file
  named GNUmakefile.configure.mk and include the first one it found.

  Projects using zmk are advised to change their manually included
  configuration file to one that contains their project name.

Changes in the next release:

* The ObjectGroup template used by Program, Program.Test, Library.A, Library.So
  and Library.DyLib is now performing rudimentary detection of a missing compiler.

* The GitVersion module now provides GitVersion.Origin attribute
  to indicate how the version information was obtained. The value "git" is used
  when git history along with git tags were used. The value "file" is used when
  the .version file was read.

* The Tarball.Src template no longer breaks when used from a dist archive.

* The Program and Script modules no longer attempt to transform installed name
  when the Configure module is not imported.

* The internal toolchain.GCC module no longer attempts to invoke gcc and g++
  if they are not installed.

* The ManPage module again checks for errors in manual pages. This feature
  was disabled in an earlier release as it was showing a problem with zmk
  that was not understood at the time.

* The Tarball.Src module only signs the release if both GPG and GPG keys are
  available.

Changes in 0.3.8:

* The release archive now contains the full collection of test files.

Changes in 0.3.7:

* The release archive no longer contains the pre-compiled manual pages. Instead
  the .in files are shipped, to be compiled locally.

Changes in 0.3.6:

* InstallUninstall no longer reuses the relative directory in the source tree
  to represent the target directory. Instead the InstallDir property is the
  only way to influence the final path. This was a late discovery but one that
  is ultimately only sensible. ZMK itself was adjusted to install correctly in
  this new scheme.

Changes in 0.3.5: