@@ -40,14 +40,14 @@ all-linux: all-linux.log
 	GREP -qFx 'ar -cr libhello.a libhello.a-hello.o' <$<
 	GREP -qFx 'c++ -fpic -MMD -c -o libhello.so.1-hello.o $(ZMK.test.OutOfTreeSourcePath)hello.cpp' <$<
 	GREP -qFx 'c++ -fpic -MMD -shared -Wl,-soname=libhello.so.1 -o libhello.so.1 libhello.so.1-hello.o' <$<
-	GREP -qFx 'ln -s libhello.so.1 libhello.so' <$<
+	GREP -qFx 'ln -sf libhello.so.1 libhello.so' <$<
 install-linux: install-linux.log
 	GREP -qFx 'install -d /usr/local/include' <$<
 	GREP -qFx 'install -m 0644 $(ZMK.test.OutOfTreeSourcePath)hello.h /usr/local/include/hello.h' <$<
 	GREP -qFx 'install -d /usr/local/lib' <$<
 	GREP -qFx 'install -m 0644 libhello.a /usr/local/lib/libhello.a' <$<
 	GREP -qFx 'install -m 0644 libhello.so.1 /usr/local/lib/libhello.so.1' <$<
-	GREP -qFx 'ln -s libhello.so.1 /usr/local/lib/libhello.so' <$<
+	GREP -qFx 'ln -sf libhello.so.1 /usr/local/lib/libhello.so' <$<
 uninstall-linux: uninstall-linux.log
 	GREP -qFx 'rm -f /usr/local/include/hello.h' <$<
 	GREP -qFx 'rm -f /usr/local/lib/libhello.a' <$<
@@ -65,7 +65,7 @@ all-macos: all-macos.log
 	GREP -qFx 'ar -cr libhello.a libhello.a-hello.o' <$<
 	GREP -qFx 'c++ -fpic -MMD -c -o libhello.1.dylib-hello.o $(ZMK.test.OutOfTreeSourcePath)hello.cpp' <$<
 	GREP -qFx 'c++ -fpic -MMD -dynamiclib -compatibility_version 1.0 -current_version 1.0 -o libhello.1.dylib libhello.1.dylib-hello.o' <$<
-	GREP -qFx 'ln -s libhello.1.dylib libhello.dylib' <$<
+	GREP -qFx 'ln -sf libhello.1.dylib libhello.dylib' <$<
 install-macos: install-macos.log
 	GREP -qFx 'install -d /usr/local/include' <$<
 	GREP -qFx 'install -m 0644 $(ZMK.test.OutOfTreeSourcePath)hello.h /usr/local/include/hello.h' <$<
@@ -73,7 +73,7 @@ install-macos: install-macos.log
 	GREP -qFx 'install -m 0644 libhello.a /usr/local/lib/libhello.a' <$<
 	GREP -qFx 'install -d /usr/local/lib' <$<
 	GREP -qFx 'install -m 0644 libhello.1.dylib /usr/local/lib/libhello.1.dylib' <$<
-	GREP -qFx 'ln -s libhello.1.dylib /usr/local/lib/libhello.dylib' <$<
+	GREP -qFx 'ln -sf libhello.1.dylib /usr/local/lib/libhello.dylib' <$<
 uninstall-macos: uninstall-macos.log
 	GREP -qFx 'rm -f /usr/local/include/hello.h' <$<
 	GREP -qFx 'rm -f /usr/local/lib/libhello.a' <$<
