@@ -11,9 +11,9 @@ t:: all clean install uninstall \
 
 all: all.log
 	# Building a symlink just creates it.
-	GREP -qFx 'ln -s target name' <$<
+	GREP -qFx 'ln -sf target name' <$<
 	GREP -qFx 'install -d subdir' <$<
-	GREP -qFx 'ln -s ../target subdir/name' <$<
+	GREP -qFx 'ln -sf ../target subdir/name' <$<
 clean: clean.log
 	# Cleaning a symlink removes it.
 	GREP -qFx 'rm -f name' <$<
@@ -23,10 +23,10 @@ install: install.log
 	# and then places the symlink there.
 	GREP -qFx 'install -d /some' <$<
 	GREP -qFx 'install -d /some/path' <$<
-	GREP -qFx 'ln -s target /some/path/name' <$<
+	GREP -qFx 'ln -sf target /some/path/name' <$<
 	GREP -qFx 'install -d /other' <$<
 	GREP -qFx 'install -d /other/path' <$<
-	GREP -qFx 'ln -s ../target /other/path/subdir/name' <$<
+	GREP -qFx 'ln -sf ../target /other/path/subdir/name' <$<
 uninstall: uninstall.log
 	# Uninstalling a symlink removes it.
 	GREP -qFx 'rm -f /some/path/name' <$<
@@ -35,9 +35,9 @@ uninstall: uninstall.log
 
 all-destdir: all-destdir.log
 	# Building a symlink just creates it.
-	GREP -qFx 'ln -s target name' <$<
+	GREP -qFx 'ln -sf target name' <$<
 	GREP -qFx 'install -d subdir' <$<
-	GREP -qFx 'ln -s ../target subdir/name' <$<
+	GREP -qFx 'ln -sf ../target subdir/name' <$<
 clean-destdir: clean-destdir.log
 	# Cleaning a symlink removes it.
 	GREP -qFx 'rm -f name' <$<
@@ -48,10 +48,10 @@ install-destdir: install-destdir.log
 	GREP -qFx 'mkdir -p /destdir' <$<
 	GREP -qFx 'install -d /destdir/some' <$<
 	GREP -qFx 'install -d /destdir/some/path' <$<
-	GREP -qFx 'ln -s target /destdir/some/path/name' <$<
+	GREP -qFx 'ln -sf target /destdir/some/path/name' <$<
 	GREP -qFx 'install -d /destdir/other' <$<
 	GREP -qFx 'install -d /destdir/other/path' <$<
-	GREP -qFx 'ln -s ../target /destdir/other/path/subdir/name' <$<
+	GREP -qFx 'ln -sf ../target /destdir/other/path/subdir/name' <$<
 uninstall-destdir: uninstall-destdir.log
 	# Uninstalling a symlink removes it.
 	GREP -qFx 'rm -f /destdir/some/path/name' <$<
